--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <h2>Charozi</h2>
                 <div class="cta-buttons">
-                    <a href="https://www.youtube.com/@czarodzi" target="_blank" class="btn youtube">
+                    <a href="https://www.youtube.com/channel/UClhIgIixoe4Pv89B8zmNvcw" target="_blank" class="btn youtube">
                         <span class="material-icons">play_circle</span> Watch on YouTube
                     </a>
                 </div>
@@ -42,7 +42,7 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://www.youtube.com/@czarodzi" target="_blank">
+            <a href="https://www.youtube.com/channel/UClhIgIixoe4Pv89B8zmNvcw" target="_blank">
                 <span class="material-icons">play_circle</span> YouTube
             </a>
             <a href="https://discord.gg/awFX43bUm5" target="_blank">
