--- a/friends.html
+++ b/friends.html
@@ -148,7 +148,7 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://www.youtube.com/@czarodzi" target="_blank">
+            <a href="https://www.youtube.com/channel/UClhIgIixoe4Pv89B8zmNvcw" target="_blank">
                 <span class="material-icons">play_circle</span> YouTube
             </a>
             <a href="https://discord.gg/awFX43bUm5" target="_blank">
