--- a/links.html
+++ b/links.html
@@ -29,7 +29,7 @@
             <div class="links-content">
                 <h2>My Links</h2>
                 <div class="links-grid-vertical">
-                    <a href="https://www.youtube.com/@czarodzi" target="_blank" class="link-card youtube">
+                    <a href="https://www.youtube.com/channel/UClhIgIixoe4Pv89B8zmNvcw" target="_blank" class="link-card youtube">
                         <span class="material-icons">play_circle</span>
                         YouTube
                     </a>
@@ -48,7 +48,7 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://www.youtube.com/@czarodzi" target="_blank">
+            <a href="https://www.youtube.com/channel/UClhIgIixoe4Pv89B8zmNvcw" target="_blank">
                 <span class="material-icons">play_circle</span> YouTube
             </a>
             <a href="https://discord.gg/awFX43bUm5" target="_blank">
