--- a/dcfaq.html
+++ b/dcfaq.html
@@ -23,19 +23,20 @@
     </header>
     
     <main>
-        <section class="faq-section">
-            <div class="faq-container">
-                <h2>FAQ: Why Do You Need to Verify Your Account?</h2>
-                <div class="faq">
-                    <p><strong>Why do I need to verify my account?</strong><br>To prevent bots, spam, and trolls from disrupting the server.</p>
-                    <p><strong>How do I verify my account?</strong><br>Follow the verification steps in the designated channel.</p>
-                    <p><strong>What happens if I don’t verify?</strong><br>You won’t get full access to the server.</p>
-                    <p><strong>Is verification safe?</strong><br>Yes! It’s just to confirm you’re a real user.</p>
-                    <p><strong>I’m having trouble verifying. What should I do?</strong><br>Contact a moderator for help.</p>
-                </div>
+    <section class="faq-section" style="display: flex; justify-content: center; align-items: center; min-height: 80vh; text-align: center;">
+        <div class="faq-container" style="max-width: 600px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+            <h2 style="font-size: 24px; font-weight: bold; font-family: 'Inter', sans-serif;">FAQ: Why Do You Need to Verify Your Account?</h2>
+            <div class="faq" style="font-size: 18px; line-height: 1.6; font-family: 'Inter', sans-serif;">
+                <p><strong>Why do I need to verify my account?</strong><br>To prevent bots, spam, and trolls from disrupting the server.</p>
+                <p><strong>How do I verify my account?</strong><br>Follow the verification steps in the designated channel.</p>
+                <p><strong>What happens if I don’t verify?</strong><br>You won’t get full access to the server.</p>
+                <p><strong>Is verification safe?</strong><br>Yes! It’s just to confirm you’re a real user.</p>
+                <p><strong>I’m having trouble verifying. What should I do?</strong><br>Contact a moderator for help.</p>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+</main>
+
     
     <footer>
         <p>&copy; 2025 Charozi. All rights reserved.</p>
