--- a/dcfaq.html
+++ b/dcfaq.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +8,83 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/unifont@15.0.01/font/unifont.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f8e8c8;
+        }
+        .faq-section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 80vh;
+            width: 100%;
+        }
+        .faq-container {
+            max-width: 600px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        h2 {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .faq p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+        header {
+            width: 100%;
+            background: orange;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+        .logo h1 {
+            margin: 0;
+            color: white;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            gap: 20px;
+        }
+        ul li {
+            display: inline;
+        }
+        ul li a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            text-align: center;
+            background: orange;
+            color: white;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
+
     <header>
         <nav>
             <div class="logo">
@@ -23,23 +99,23 @@
     </header>
     
     <main>
-    <section class="faq-section" style="display: flex; justify-content: center; align-items: center; min-height: 80vh; text-align: center;">
-        <div class="faq-container" style="max-width: 600px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-            <h2 style="font-size: 24px; font-weight: bold; font-family: 'Inter', sans-serif;">FAQ: Why Do You Need to Verify Your Account?</h2>
-            <div class="faq" style="font-size: 18px; line-height: 1.6; font-family: 'Inter', sans-serif;">
-                <p><strong>Why do I need to verify my account?</strong><br>To prevent bots, spam, and trolls from disrupting the server.</p>
-                <p><strong>How do I verify my account?</strong><br>Follow the verification steps in the designated channel.</p>
-                <p><strong>What happens if I don’t verify?</strong><br>You won’t get full access to the server.</p>
-                <p><strong>Is verification safe?</strong><br>Yes! It’s just to confirm you’re a real user.</p>
-                <p><strong>I’m having trouble verifying. What should I do?</strong><br>Contact a moderator for help.</p>
+        <section class="faq-section">
+            <div class="faq-container">
+                <h2>FAQ: Why Do You Need to Verify Your Account?</h2>
+                <div class="faq">
+                    <p><strong>Why do I need to verify my account?</strong><br>To prevent bots, spam, and trolls from disrupting the server.</p>
+                    <p><strong>How do I verify my account?</strong><br>Follow the verification steps in the designated channel.</p>
+                    <p><strong>What happens if I don’t verify?</strong><br>You won’t get full access to the server.</p>
+                    <p><strong>Is verification safe?</strong><br>Yes! It’s just to confirm you’re a real user.</p>
+                    <p><strong>I’m having trouble verifying. What should I do?</strong><br>Contact a moderator for help.</p>
+                </div>
             </div>
-        </div>
-    </section>
-</main>
-
+        </section>
+    </main>
     
     <footer>
         <p>&copy; 2025 Charozi. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
