--- a/dcfaq.html
+++ b/dcfaq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charozi - FAQ</title>
+    <title>Charozi's Server FAQ</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,7 +18,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #f8e8c8;
+            background-color: #FF6B00;
         }
         .faq-section {
             display: flex;
@@ -29,10 +29,11 @@
         }
         .faq-container {
             max-width: 600px;
-            background: white;
+            background: orange;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            color: white;
         }
         h2 {
             font-size: 24px;
