--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://charozi.pages.dev">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        window.location.href = "https://charozi.pages.dev";
+    </script>
     <title>Redirecting...</title>
 </head>
 <body>
