--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>
-        window.location.href = "https://charozi.pages.dev";
-    </script>
-    <title>Redirecting...</title>
-</head>
-<body>
-    <p>If you are not redirected, <a href="https://charozi.pages.dev">click here</a>.</p>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://bit.ly/charozi">
+        <script type="text/javascript">
+            window.location.href = "https://bit.ly/charozi"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://bit.ly/charozi'>link to example</a>.
+    </body>
 </html>
